--- a/index.html
+++ b/index.html
@@ -15,7 +15,17 @@
 <body>
     <!-- header start -->
     <header>
-
+        <nav>
+            <h2 class="nav-title"><i class="fa fa-lightbulb" v style="margin-right:15px;"></i> Idea</h2>
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Works</li>
+                <li>
+                    <img src="images/icons/profile.png" alt="">
+                </li>
+            </ul>
+        </nav>
     </header>
     <main>
         <!-- top players & top blogs -->
